deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue
  namespace: develop
  labels:
    app: nginx-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-blue
  template:
    metadata:
      labels:
        app: nginx-blue
    spec:
      containers:
      - name: nginx-blue
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-volume
        configMap:
          name: blue
          items:
          - key: nginx.conf
            path: nginx.conf
