service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-green-svc
  namespace: develop
  labels:
    app.kubernetes.io/name: nginx-green
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: green
    app.kubernetes.io/version: "1.0"
spec:
  selector:
    app.kubernetes.io/name: nginx-green
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: green
    app.kubernetes.io/version: "1.0"
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-green-svc
  type: ClusterIP
