ingress-blue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  namespace: develop
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/blue"
        backend:
          service:
            name: nginx-blue
            port:
              number: 80
