ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  namespace: develop
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/green"
        backend:
          service:
            name: nginx-green
            port:
              number: 80
